@@ -647,7 +647,11 @@ dump_c_node (buffer, node, spc)
       break;
 
     case TARGET_EXPR:
-      NIY;
+      dump_c_node (buffer, TYPE_NAME (TREE_TYPE (node)), spc);
+      output_add_character (buffer, '(');
+      dump_c_node (buffer, TARGET_EXPR_INITIAL (node), spc);
+      output_add_character (buffer, ')');
+      break;
 
     case COND_EXPR:
       dump_c_node (buffer, TREE_OPERAND (node, 0), spc);
@@ -1064,7 +1068,7 @@ dump_c_node (buffer, node, spc)
     case RETURN_STMT:
       INDENT (spc);
       output_add_string (buffer, "return");
-      if (TREE_CODE (TREE_TYPE (TREE_TYPE (current_function_decl))) != VOID_TYPE)
+      if (RETURN_EXPR (node))
 	{
 	  output_add_space (buffer);
 	  if (TREE_CODE (RETURN_EXPR (node)) == MODIFY_EXPR)
