@@ -1,3 +1,8 @@
+2002-07-19  Jason Merrill  <jason@redhat.com>
+
+	* c-pretty-print.c (dump_c_node) [TARGET_EXPR]: Handle.
+	[COND_EXPR]: Print a returned expression in a void function.
+
 2002-07-19  Ben Elliston  <bje@redhat.com>
  
  	* tree-ssa-pre.c (tree_perform_ssapre): Don't dump the original
